--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       }
     };
   </script>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="welcome">
     <img src="logo-universite.png" alt="Logo Université" class="logo">
-    <h1>Welcome to Winter's Gates RP</h1>
+    <h2 class="welcome-title">Welcome</h2>
     <button onclick="window.location.href='form.html'">Create your profile</button>
   </div>
 </body>
