--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
     <input type="text" id="greek" placeholder="Greek House">
     <textarea id="story" placeholder="RP Story..."></textarea>
 
-    <button onclick="sendToDiscord()">Send to Discord</button>
+    <button onclick="sendToDiscord()">Send</button>
   </div>
 </body>
 </html>
