--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<audio id="introSound" src="assets/entrance.mp3"></audio>
 		<div class="welcome">
 			<img src="logo-universite.png" alt="Logo Université" class="logo">
 			<h2 class="welcome-title">Welcome</h2>
