--- a/profile.html
+++ b/profile.html
@@ -32,6 +32,6 @@
 			document.getElementById("greekField").textContent = localStorage.getItem("rp_greek") || "...";
 			document.getElementById("storyField").textContent = localStorage.getItem("rp_story") || "...";
 		</script>
-		<button class="back-button" onclick="goBack()">← Back</button>
+		<button class="back-button" onclick="window.location.href='index.html'">← Retour</button>
 	</body>
 </html>
