--- a/form.html
+++ b/form.html
@@ -19,6 +19,6 @@
 			<textarea id="story" placeholder="RP Story..."></textarea>
 			<button onclick="sendToDiscord()">Send</button>
 		</div>
-		<button class="back-button" onclick="goBack()">← Back</button>
+		<button class="back-button" onclick="window.location.href='index.html'">← Retour</button>
 	</body>
 </html>
