--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<audio id="introSound" src="assets/entrance.mp3"></audio>
-		<div class="welcome">
-			<img src="logo-universite.png" alt="Logo Université" class="logo">
-			<h2 class="welcome-title">Welcome</h2>
-			<button onclick="window.location.href='form.html'">Create your profile</button>
+		<div id="intro">
+			<img id="imgBlue" src="assets/img/bg1.png">
+			<img id="imgRed" src="assets/img/bg2.png">
+			<img id="imgFusion" src="assets/img/bg.png">
+			<div id="introContent">
+				<audio id="introSound" src="assets/entrance.mp3"></audio>
+				<img src="assets/img/wgcitylogo.png" id="Citylogo">
+				<h2>Welcome</h2>
+				<button onclick="window.location.href='welcome.html'">Enter</button>
+			</div>
 		</div>
 	</body>
 </html>
