--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 				<button onclick="window.location.href='welcome.html'">Enter</button>
 			</div>
 		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
