--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 				}
 			};
 		</script>
-		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="intro">
@@ -19,7 +18,7 @@
 			<img id="imgRed" src="assets/img/bg2.png">
 			<img id="imgFusion" src="assets/img/bg.png">
 			<div id="introContent">
-				<audio id="introSound" src="assets/entrance.mp3"></audio>
+				<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 				<img src="assets/img/wgcitylogo.png" id="Citylogo">
 				<h2>Welcome</h2>
 				<button onclick="window.location.href='welcome.html'">Enter</button>
