--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <audio id="introSound" src="assets/entrance.mp3"></audio>
+  <audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 
   <div class="rp-profile">
     <h2 id="nameField">Nom du personnage</h2>
