--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<audio id="introSound" src="assets/entrance.mp3"></audio>
+		<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 		<div class="rp-form">
 			<h2>Create or Update RP Profile</h2>
 			<input type="text" id="name" placeholder="Full Name">
