--- a/form.html
+++ b/form.html
@@ -6,7 +6,6 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 		<div class="rp-form">
 			<h2>Profil</h2>
 			<input type="text" id="name" placeholder="Full Name">
@@ -23,6 +22,6 @@
 			
 			<button onclick="sendToDiscord()">Send</button>
 		</div>
-		<button class="back-button" onclick="window.location.href='index.html'">← Retour</button>
+		<button class="back-button" onclick="window.location.href='index.html'">← Back</button>
 	</body>
 </html>
