--- a/profile.html
+++ b/profile.html
@@ -4,33 +4,31 @@
     <h2 id="nameField">Nom du personnage</h2>
 </head>
 <body>
-  <audio id="introSound" src="assets/sound/entrance.mp3"></audio>
-
   <div class="rp-profile">
     <div class="rp-frame">
-      <h3>Identité</h3>
-      <p><strong>Genre :</strong> <span id="genderField">...</span></p>
-      <p><strong>Date de naissance :</strong> <span id="dobField">...</span></p>
-      <p><strong>Taille :</strong> <span id="heightField">...</span></p>
-      <p><strong>Poids :</strong> <span id="weightField">...</span></p>
+      <h3>Identity</h3>
+      <p><strong>Gender :</strong> <span id="genderField">...</span></p>
+      <p><strong>DoB :</strong> <span id="dobField">...</span></p>
+      <p><strong>Height :</strong> <span id="heightField">...</span></p>
+      <p><strong>Weight :</strong> <span id="weightField">...</span></p>
     </div>
 
     <div class="rp-frame">
-      <h3>Académique</h3>
-      <p><strong>Spécialité :</strong> <span id="majorField">...</span></p>
-      <p><strong>Maison grecque :</strong> <span id="greekField">...</span></p>
+      <h3>Academic</h3>
+      <p><strong>Major:</strong> <span id="majorField">...</span></p>
+      <p><strong>Greek :</strong> <span id="greekField">...</span></p>
       <img id="greekLogo" src="" alt="Logo Greek House" style="max-height: 80px; display: none;">
     </div>
 
     <div class="rp-frame">
-      <h3>Histoire RP</h3>
+      <h3>Storyline</h3>
       <p id="storyField">...</p>
     </div>
 
     <div class="rp-buttons">
-      <button onclick="window.location.href='form.html'">📝 Modifier</button>
-      <button onclick="sendToDiscord()">📤 Envoyer</button>
-      <button class="back-button" onclick="window.location.href='index.html'">← Retour</button>
+      <button onclick="window.location.href='form.html'">📝 Edit</button>
+      <button onclick="sendToDiscord()">📤 Send</button>
+      <button class="back-button" onclick="window.location.href='index.html'">← Back</button>
     </div>
   </div>
 
