--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<title>Winter's Gates RP</title>
 		<link rel="stylesheet" href="style.css">
 		<script>
-			window.onload = function() {
+			window.onload = function () {
 				const name = localStorage.getItem("rp_name");
 				if (name) {
 					window.location.href = "profile.html"; // profil déjà rempli
@@ -13,6 +14,8 @@
 		</script>
 	</head>
 	<body>
+
+		<!-- 🎬 Intro animée -->
 		<div id="intro">
 			<img id="imgBlue" src="assets/img/bg1.png">
 			<img id="imgRed" src="assets/img/bg2.png">
@@ -21,9 +24,24 @@
 				<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 				<img src="assets/img/wgcitylogo.png" id="Citylogo">
 				<h2>Welcome</h2>
-				<button onclick="window.location.href='welcome.html'">Enter</button>
+				<button onclick="showWelcome()">Enter</button>
 			</div>
 		</div>
+
+		<!-- 🌆 Bloc d’accueil (caché au départ) -->
+		<div class="welcome" id="welcomeBlock" style="display: none;">
+			<img src="assets/img/wgcitylogo.png" alt="City Logo" class="logo">
+			<h2 class="welcome-title">Welcome to Winter's Gates</h2>
+			<button onclick="window.location.href='form.html'">Create your profile</button>
+		</div>
+
 		<script src="script.js"></script>
+		<script>
+			function showWelcome() {
+			document.getElementById("intro").style.display = "none";
+			document.getElementById("welcomeBlock").style.display = "block";
+			}
+		</script>
+
 	</body>
 </html>
