--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 				<img src="assets/img/wgcitylogo.png" id="Citylogo">
 				<h2>Welcome</h2>
-				<button onclick="showWelcome()">Enter</button>
+				<button onclick="showWelcome()">enter</button>
 			</div>
 		</div>
 		<!-- 🌆 Bloc d’accueil (caché au départ) -->
