--- a/profile.html
+++ b/profile.html
@@ -36,9 +36,9 @@
 
     <!-- 📤 Boutons -->
     <div class="rp-buttons">
-      <button onclick="window.location.href='form.html'">📝 Edit</button>
-      <button onclick="sendToDiscord()">📤 Send</button>
-      <button class="back-button" onclick="window.location.href='index.html'">← Back</button>
+      <button onclick="window.location.href='form.html'">📝 edit</button>
+      <button onclick="sendToDiscord()">📤 send</button>
+      <button class="back-button" onclick="window.location.href='index.html'">← back</button>
     </div>
   </div>
 
