--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<!-- 🎬 Intro animée -->
+	<!-- 🎬 Intro animée -->
 		<div id="intro">
 			<img id="imgBlue" src="assets/img/bg1.png">
 			<img id="imgRed" src="assets/img/bg2.png">
@@ -14,28 +14,21 @@
 			<div id="introContent">
 				<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 				<img src="assets/img/wgcitylogo.png" id="Citylogo">
-				<h2>Welcome</h2>
-				<button onclick="showWelcome()">enter</button>
+				<h2>Welcome\nTo\nWinter's Gate</h2>
+				<button onclick="enterRP()">Enter</button>
 			</div>
 		</div>
-		<!-- 🌆 Bloc d’accueil (caché au départ) -->
-		<div class="welcome" id="welcomeBlock" style="display: none;">
-			<img src="assets/img/wgcitylogo.png" alt="City Logo" class="logo">
-			<h2 class="welcome-title">Welcome to Winter's Gates</h2>
-			<button onclick="window.location.href='form.html'">Create your profile</button>
-		</div>
 
-		<script src="script.js"></script>
-		<script>
-			function showWelcome() {
-				document.getElementById("intro").style.display = "none";
-				document.getElementById("welcomeBlock").style.display = "block";
-
-				const name = localStorage.getItem("rp_name");
-				if (name) {
-					window.location.href = "profile.html"; // redirection après intro si profil déjà rempli
-				}
+	<script src="script.js"></script>
+	<script>
+		function enterRP() {
+		const name = localStorage.getItem("rp_name");
+			if (name) {
+				window.location.href = "profile.html"; // profil déjà rempli
+			} else {
+				window.location.href = "form.html"; // créer un nouveau profil
 			}
-		</script>
-	</body>
+		}
+	</script>
+</body>
 </html>
