--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 			<div id="introContent">
 				<audio id="introSound" src="assets/sound/entrance.mp3"></audio>
 				<img src="assets/img/wgcitylogo.png" id="Citylogo">
-				<h2>Welcome\nTo\nWinter's Gate</h2>
+				<h2>Welcome 
+				To 
+				Winter's Gate</h2>
 				<button onclick="enterRP()">Enter</button>
 			</div>
 		</div>
